--- a/package.json
+++ b/package.json
@@ -18,8 +18,15 @@
     "@angular/platform-browser": "^17.0.0",
     "@angular/platform-browser-dynamic": "^17.0.0",
     "@angular/router": "^17.0.0",
+    "brfs": "^2.0.2",
+    "buffer": "^6.0.3",
+    "eth-sig-util": "^3.0.1",
+    "ethereumjs-util": "^7.1.5",
+    "os-browserify": "^0.3.0",
+    "process": "^0.11.10",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
+    "util": "^0.12.5",
     "web3": "^4.2.2",
     "zone.js": "~0.14.2"
   },
@@ -28,6 +35,8 @@
     "@angular/cli": "^17.0.1",
     "@angular/compiler-cli": "^17.0.0",
     "@types/jasmine": "~5.1.0",
+    "browserify-global-shim": "^1.0.3",
+    "browserify-shim": "^3.8.16",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
@@ -36,5 +45,16 @@
     "karma-jasmine-html-reporter": "~2.1.0",
     "ng-packagr": "^17.0.0",
     "typescript": "~5.2.2"
+  },
+  "browserify": {
+    "transform": [
+      "browserify-shim"
+    ]
+  },
+  "browser": {
+    "util": "browserify-util"
+  },
+  "browserify-shim": {
+    "util": "global:util"
   }
 }
