changes crypto library, added further kitchen sink items

--- a/angular.json
+++ b/angular.json
@@ -31,7 +31,8 @@
             "styles": [
               "src/styles.scss"
             ],
-            "scripts": [],
+            "scripts": [
+            ],
             "stylePreprocessorOptions": {
               "includePaths": [
                 "src/styles"
@@ -49,8 +50,8 @@
               "budgets": [
                 {
                   "type": "initial",
-                  "maximumWarning": "500kb",
-                  "maximumError": "1mb"
+                  "maximumWarning": "2mb",
+                  "maximumError": "5mb"
                 },
                 {
                   "type": "anyComponentStyle",
