--- a/package.json
+++ b/package.json
@@ -18,16 +18,11 @@
     "@angular/platform-browser": "^17.0.0",
     "@angular/platform-browser-dynamic": "^17.0.0",
     "@angular/router": "^17.0.0",
-    "@walletconnect/web3-provider": "^1.8.0",
-    "brfs": "^2.0.2",
-    "buffer": "^6.0.3",
-    "eth-sig-util": "^3.0.1",
-    "ethereumjs-util": "^7.1.5",
-    "os-browserify": "^0.3.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
-    "util": "^0.12.5",
-    "web3": "^4.2.2",
+    "tweetnacl": "^1.0.3",
+    "tweetnacl-util": "^0.15.1",
+    "web3": "^4.3.0",
     "zone.js": "~0.14.2"
   },
   "devDependencies": {
@@ -35,18 +30,12 @@
     "@angular/cli": "^17.0.1",
     "@angular/compiler-cli": "^17.0.0",
     "@types/jasmine": "~5.1.0",
-    "browserify": "^17.0.0",
-    "browserify-global-shim": "^1.0.3",
-    "browserify-shim": "^3.8.16",
-    "envify": "^4.1.0",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
-    "ng-packagr": "^17.0.0",
-    "process": "^0.11.10",
     "typescript": "~5.2.2"
   },
   "browserify": {
