--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "^17.0.0",
     "@angular/platform-browser-dynamic": "^17.0.0",
     "@angular/router": "^17.0.0",
+    "@mdi/font": "^7.3.67",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "tweetnacl": "^1.0.3",
