--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "@angular/router": "^17.0.0",
     "@mdi/font": "^7.3.67",
     "rxjs": "~7.8.0",
+    "simple-icons": "^10.3.0",
     "tslib": "^2.3.0",
     "tweetnacl": "^1.0.3",
     "tweetnacl-util": "^0.15.1",
     "web3": "^4.3.0",
+    "web3-validator": "^2.0.3",
     "zone.js": "~0.14.2"
   },
   "devDependencies": {
