added preliminary siwe client integration

--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "@angular/platform-browser-dynamic": "^17.0.0",
     "@angular/router": "^17.0.0",
     "@mdi/font": "^7.3.67",
+    "ethers": "^5.7.2",
     "rxjs": "~7.8.0",
     "simple-icons": "^10.3.0",
+    "siwe": "^2.1.4",
     "tslib": "^2.3.0",
     "tweetnacl": "^1.0.3",
     "tweetnacl-util": "^0.15.1",
