--- a/package.json
+++ b/package.json
@@ -18,10 +18,14 @@
     "@angular/platform-browser": "^17.0.0",
     "@angular/platform-browser-dynamic": "^17.0.0",
     "@angular/router": "^17.0.0",
+    "@apollo/client": "^3.0.0",
     "@azure/msal-angular": "^3.0.10",
     "@azure/msal-browser": "^3.7.0",
     "@mdi/font": "^7.3.67",
+    "apollo-angular": "^6.0.0",
+    "bignumber.js": "^9.1.2",
     "ethers": "^5.7.2",
+    "graphql": "^16",
     "json-canonicalize": "^1.0.6",
     "rxjs": "~7.8.0",
     "simple-icons": "^10.3.0",
