--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "@azure/msal-angular": "^3.0.10",
     "@azure/msal-browser": "^3.7.0",
     "@mdi/font": "^7.3.67",
+    "@metamask/eth-sig-util": "^7.0.1",
     "apollo-angular": "^6.0.0",
     "bignumber.js": "^9.1.2",
+    "buffer": "^6.0.3",
     "ethers": "^5.7.2",
     "graphql": "^16",
     "json-canonicalize": "^1.0.6",
