--- a/angular.json
+++ b/angular.json
@@ -116,7 +116,7 @@
             "tsConfig": "tsconfig.spec.json",
             "inlineStyleLanguage": "scss",
             "assets": [
-              "src/favicon.ico",
+              "src/assets/favicos/favicon.ico",
               "src/assets"
             ],
             "styles": [
